improve exception handling, and use slf4j logging consistently. shuffle module structure for better organization.